fixed input jump5

--- a/src/containers/Auth/Auth.module.css
+++ b/src/containers/Auth/Auth.module.css
@@ -7,7 +7,7 @@
     padding: 10px;
     box-sizing: border-box;
     background-color: white;
-    display: block;
+    display: inline-block;
 }
 
 @media (min-width: 600px) {
@@ -18,4 +18,9 @@
 
 .Auth h1 {
     color:  #AA381E;
+}
+
+.Auth form {
+    display: flex;
+    flex-direction: column;
 }
